Mon May 14 13:17:57 2012  Luis Lavena  <luislavena@gmail.com>

	* test/ruby/test_io.rb (class TestIO):  Disable GC during IO tests to
	  avoid file descriptors being GC'ed. Suggestion by Tomoyuki Chikanaga
	  [ruby-core:43951][Bug #6228]

Fri May 11 14:09:48 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (PUSH): to prevent VALUE from GC,
	  must not cast it to unsigned long, which may be shorter than
	  VALUE, and the result can be mere garbage.

Fri May 11 01:04:54 2012  Hiroshi Shirosaki  <h.shirosaki@gmail.com>

	* io.c (io_unread): fix IO#pos with mode 'r' bug on Windows.
	  If the end of reading buffer is CR, io_unread() needs to unread one
	  more byte.
	  [ruby-core:44874] [Bug #6401]

	* test/ruby/test_io_m17n.rb (TestIO_M17N#test_pos_with_buffer_end_cr):
	  add a test for above.

Wed May  9 15:59:17 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* configure.in (RUBY_WERROR_FLAG): append all warning flags which
	  are enabled to compile, so that printf format modifiers properly
	  fail.  [ruby-core:41351] [Bug #5679]

Mon May  7 20:23:29 2012  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb (random_bytes): call to_int method for the
	  argument at first.

Mon May  7 20:23:29 2012  Tanaka Akira  <akr@fsij.org>

	* lib/securerandom.rb: show actual read length in an error message.

Mon May  7 11:09:20 2012  NARUSE, Yui  <naruse@ruby-lang.org>

	* ext/bigdecimal/bigdecimal.c (Init_bigdecimal): define IDs before
	  they are used. [ruby-core:44900] [Bug #6406]

Fri Apr 27 11:02:33 2012  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/rinda/test_rinda.rb (test_core_03_notify): Fixed test failures
	  [ruby-dev:44430] [Ruby 1.9 - Bug #372]

Fri Apr 27 08:29:51 2012  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* test/rinda/test_rinda.rb: fix sticks on some testsf problem 
	  [Bug #6272]

Wed Apr 25 05:56:56 2012  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/optparse.rb (OptionParser#to_a): split for each lines.