@@ -5926,7 +5926,7 @@ parser_tokadd_string(struct parser_params *parser,
 	      default:
 		if (c == -1) return -1;
 		if (!ISASCII(c)) {
-		    tokadd('\\');
+		    if ((func & STR_FUNC_EXPAND) == 0) tokadd('\\');
 		    goto non_ascii;
 		}
 		if (func & STR_FUNC_REGEXP) {
@@ -7015,7 +7015,6 @@ parser_yylex(struct parser_params *parser)
             }
             else if (!lex_eol_p() && !(c = *lex_p, ISASCII(c))) {
                 nextc();
-		tokadd('\\');
                 if (tokadd_mbchar(c) == -1) return 0;
             }
             else {
